<resources>
    <string name="app_name" translatable="false">eInvite</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="content_authority" translatable="false">com.tyagiabhinav.einvite</string>

    <!--<string name="enc_key">aBh!n@v7yA6i</string>-->

    <string name="message">Message</string>
    <string name="invitee_details">Invitee Detail</string>
    <string name="venue">Venue</string>

    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street1">Street Address 1</string>
    <string name="street2">Street Address 2 (optional)</string>
    <string name="zip">ZIP (optional)</string>
    <string name="email">Email</string>
    <string name="phone">Contact Number</string>
    <string name="phone_optional">Contact Number (optional)</string>
    <string name="invite_title">Invitation Title</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="msg_count">0/150</string>
    <string name="venue_name">Venue Name</string>
    <string name="website">Website  (optional)</string>
    <string name="website_hint">http://www.tyagiabhinav.com"</string>
    <string name="address">Address</string>
    <string name="address_hint">Type complete address for better accuracy</string>
    <string name="invite_msg1">My invitation to you.\nUse the link for details\n</string>
    <string name="invite_msg2">\nUse the link for details\n</string>

    <string-array name="invitation_type_array">
        <item>Birthday</item>
        <item>Marriage</item>
        <!--<item>Celebration</item>-->
        <!--<item>Breakfast</item>-->
        <!--<item>Lunch</item>-->
        <!--<item>Dinner</item>-->
        <!--<item>High Tea</item>-->
        <!--<item>Conference</item>-->
        <!--<item>Town Hall</item>-->
        <!--<item>Match</item>-->
        <!--<item>Meeting</item>-->
        <!--<item>Special</item>-->
        <!--<item>Other</item>-->
    </string-array>


    <string name="home_title">Home</string>
    <string name="registration_title">Register</string>
    <string name="create_invite_title">Invitation Details</string>
    <string name="create_venue_title">Venue Details</string>
    <string name="invitation_title">Invitation</string>


    <string name="code_entry">enter code to view invitation</string>

    <string name="logo_e" translatable="false">e</string>
    <string name="logo_invite" translatable="false">Invite</string>
    <string name="hyphen" translatable="false">-</string>

    <string name="shared_string_name" translatable="false">"shared_fab"</string>
    <string name="no_matches">No Invitation Saved</string>
    <string name="ServiceError">Error while communicating with Server</string>

    <string name="device_screen" translatable="false">Normal</string>

    <string name="create_invite_alert_msg">Are you sure you want to create new invitation?</string>

    <string name="exception_msg1">OOPS !!\nSomething went wrong\n\nApologies\nfor the inconvenience</string>
    <string name="exception_msg2">Report the issue to help us improve the app!</string>
    <string name="exception_btn_home">Home</string>
    <string name="exception_btn_report">Report</string>

    <string name="home_fab_content_description">create new invitation</string>
    <string name="registration_fab_content_description">register user</string>
    <string name="create_invite_fab_content_description">continue to enter venue details</string>
    <string name="create_venue_fab_content_description">register new invitation</string>
    <string name="venue_detail_fab_content_description">navigate to venue</string>

    <string name="code_content_description">enter invitation code</string>
    <string name="user_name_content_description">enter your name</string>
    <string name="country_content_description">enter country name</string>
    <string name="state_content_description">enter state or province name</string>
    <string name="add1_content_description">enter street address 1</string>
    <string name="add2_content_description">enter street address 2 (optional)</string>
    <string name="city_content_description">enter city name</string>
    <string name="zip_content_description">enter zip or pin number</string>
    <string name="contact_number_content_description">enter contact number</string>
    <string name="email_content_description">enter email address</string>
    <string name="website_content_description">enter website address</string>
    <string name="address_content_description">enter complete address</string>
    <string name="venue_name_content_description">enter venue name</string>
    <string name="title_content_description">enter invitation title</string>
    <string name="type_content_description">select invitation type</string>
    <string name="time_content_description">select time</string>
    <string name="date_content_description">select date</string>
    <string name="message_content_description">enter message</string>
    <string name="place_picker_content_description">select to open place picker</string>
    <string name="select_location">Select a venue</string>
    <string name="selectPlace">Pick a new place</string>
    <string name="or">or</string>


</resources>
