<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:minHeight="?attr/actionBarSize"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"/>-->

    <!--<FrameLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Text_Form"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name"
                style="@style/Edit_Text_Form_Entry"
                android:contentDescription="@string/user_name_content_description" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin_medium"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text_Form"
                        android:text="@string/country" />

                    <EditText
                        android:id="@+id/country"
                        style="@style/Edit_Text_Form_Entry"
                        android:contentDescription="@string/country_content_description" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text_Form"
                        android:text="@string/state" />

                    <EditText
                        android:id="@+id/state"
                        style="@style/Edit_Text_Form_Entry"
                        android:contentDescription="@string/state_content_description" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/Text_Form"
                android:text="@string/street1" />

            <EditText
                android:id="@+id/street1"
                style="@style/Edit_Text_Form_Entry"
                android:contentDescription="@string/add1_content_description"
                android:inputType="textPostalAddress" />

            <TextView
                style="@style/Text_Form"
                android:text="@string/street2" />

            <EditText
                android:id="@+id/street2"
                style="@style/Edit_Text_Form_Entry"
                android:contentDescription="@string/add2_content_description"
                android:inputType="textPostalAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin_medium"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text_Form"
                        android:text="@string/city" />

                    <EditText
                        android:id="@+id/city"
                        style="@style/Edit_Text_Form_Entry"
                        android:contentDescription="@string/city_content_description" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text_Form"
                        android:text="@string/zip" />

                    <EditText
                        android:id="@+id/zip"
                        style="@style/Edit_Text_Form_Entry"
                        android:contentDescription="@string/zip_content_description"
                        android:inputType="number" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/Text_Form"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                style="@style/Edit_Text_Form_Entry"
                android:contentDescription="@string/email_content_description"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/Text_Form"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phone"
                style="@style/Edit_Text_Form_Entry"
                android:contentDescription="@string/contact_number_content_description"
                android:inputType="phone" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_margin_large" />

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/registerBtn"
        style="@style/Fab_style"
        android:contentDescription="@string/registration_fab_content_description"
        android:src="@drawable/ic_done_24dp" />

</FrameLayout><!--</LinearLayout>-->