<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:minHeight="?attr/actionBarSize" />-->

    <!--<FrameLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                style="@style/Text_Form"
                android:text="@string/select_location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <Spinner
                    android:id="@+id/savedPalces"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin_large"
                    android:layout_weight="1" />

                <TextView
                    style="@style/Text_Form"
                    android:textSize="@dimen/text_invitation_large"
                    android:text="@string/or"/>

                <TextView
                    android:id="@+id/mapBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/text_margin_large"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/place_picker_content_description"
                    android:drawablePadding="@dimen/drawable_text_invitation_padding_medium"
                    android:drawableStart="@drawable/ic_map_24dp"
                    android:gravity="center_vertical"
                    android:text="@string/selectPlace"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_form_size" />
            </LinearLayout>

            <TextView
                style="@style/Text_Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableStart="@drawable/dash"
                android:drawableEnd="@drawable/dash"
                android:drawableLeft="@drawable/dash"
                android:drawableRight="@drawable/dash"
                android:layout_margin="@dimen/text_margin_large"
                android:text="@string/or"
                android:textSize="@dimen/text_invitation_large"
                />
            
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                style="@style/Text_Form"
                android:text="@string/venue_name" />


            <EditText
                android:id="@+id/venueName"
                style="@style/Edit_Text_Form_Entry"
                android:contentDescription="@string/venue_name_content_description"
                android:inputType="textCapWords" />


            <TextView
                style="@style/Text_Form"
                android:text="@string/phone_optional" />

            <EditText
                android:id="@+id/venuePhone"
                style="@style/Edit_Text_Form_Entry"
                android:contentDescription="@string/contact_number_content_description"
                android:inputType="phone" />

            <TextView
                style="@style/Text_Form"
                android:text="@string/website" />

            <EditText
                android:id="@+id/website"
                style="@style/Edit_Text_Form_Entry"
                android:contentDescription="@string/website_content_description"
                android:inputType="textWebEditText" />

            <TextView
                style="@style/Text_Form"
                android:text="@string/address" />

            <EditText
                android:id="@+id/address"
                style="@style/Edit_Box_Form_Entry"
                android:contentDescription="@string/address_content_description"
                android:hint="@string/address_hint" />

        </LinearLayout>

    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createSharedFab"
        style="@style/Fab_style"
        android:contentDescription="@string/create_venue_fab_content_description"
        android:src="@drawable/ic_done_24dp"
        android:transitionName="@string/shared_string_name"
        app:pressedTranslationZ="@dimen/z_transition_elevation" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout><!--</LinearLayout>-->