<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:minHeight="?attr/actionBarSize"/>-->

    <!--<FrameLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                style="@style/Text_Form"
                android:text="@string/invite_title" />

            <EditText
                android:id="@+id/title"
                style="@style/Edit_Text_Form_Entry"
                android:contentDescription="@string/title_content_description"
                android:maxLength="25" />

            <TextView
                style="@style/Text_Form"
                android:text="@string/type" />

            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin_medium"
                android:contentDescription="@string/type_content_description"
                android:entries="@array/invitation_type_array" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin_medium"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text_Form"
                        android:text="@string/time" />

                    <EditText
                        android:id="@+id/time"
                        style="@style/Edit_Text_Form_Entry"
                        android:clickable="true"
                        android:contentDescription="@string/time_content_description"
                        android:focusable="false"
                        android:hint="hh:mm a"
                        android:maxLength="8" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text_Form"
                        android:text="@string/date" />

                    <EditText
                        android:id="@+id/date"
                        style="@style/Edit_Text_Form_Entry"
                        android:clickable="true"
                        android:contentDescription="@string/date_content_description"
                        android:focusable="false"

                        android:hint="mm/dd/yyyy"
                        android:maxLength="10" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/Text_Form"
                android:text="@string/message" />

            <EditText
                android:id="@+id/message"
                style="@style/Edit_Box_Form_Entry"
                android:contentDescription="@string/message_content_description" />

            <TextView
                android:id="@+id/msgLimit"
                style="@style/Text_Form"
                android:layout_gravity="end"
                android:text="@string/msg_count"
                android:textSize="@dimen/text_invitation_small" />

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createSharedFab"
        style="@style/Fab_style"
        android:contentDescription="@string/create_invite_fab_content_description"
        android:src="@drawable/ic_arrow_forward_24dp"
        android:transitionName="@string/shared_string_name"
        app:pressedTranslationZ="@dimen/z_transition_elevation" />

</FrameLayout>

    <!--</LinearLayout>-->