<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/birthday_bg"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Text_Logo_Widget"
                android:text="@string/logo_e"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                style="@style/Text_Logo_Widget"
                android:text="@string/logo_invite"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <ListView
            android:id="@+id/widgetListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="@dimen/z_transition_elevation"
            android:divider="@color/colorAccent"/>

        <TextView
            android:id="@+id/widgetEmptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:text="@string/no_matches"
            android:textSize="@dimen/text_invitation_large" />

    </LinearLayout>


</FrameLayout>