<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?attr/actionBarSize"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:elevation="@dimen/appbar_elevation"-->
    <!--app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />-->

    <!--<FrameLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Text_Logo"
                    android:text="@string/logo_e"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    style="@style/Text_Logo"
                    android:text="@string/logo_invite"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/code1"
                    style="@style/Edit_Text_Code_Entry"
                    android:contentDescription="@string/code_content_description" />

                <TextView style="@style/Text_Code_Dash" />

                <EditText
                    android:id="@+id/code2"
                    style="@style/Edit_Text_Code_Entry"
                    android:contentDescription="@string/code_content_description"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView style="@style/Text_Code_Dash" />

                <EditText
                    android:id="@+id/code3"
                    style="@style/Edit_Text_Code_Entry"
                    android:contentDescription="@string/code_content_description" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin_large"
                android:gravity="center_horizontal|top"
                android:paddingBottom="@dimen/text_margin_large"
                android:text="@string/code_entry"
                android:textSize="@dimen/text_invitation_medium" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createInviteFab"
        style="@style/Fab_style"
        android:contentDescription="@string/home_fab_content_description"
        android:src="@drawable/ic_add_24dp"
        app:pressedTranslationZ="@dimen/z_transition_elevation" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>

    <!--</LinearLayout>-->